--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+body {
+    background-color: #083b4c;
+
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -11,6 +16,13 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #083b4c;
+}
+
+h1 {
+    text-align: center;
+    color: white;
+    margin: 30px 0;
+    font-size: 50px;
 }
 
 .box {
